Fix for overlap bug on homepage

--- a/_sass/scss/base/_blocks.scss
+++ b/_sass/scss/base/_blocks.scss
@@ -56,7 +56,7 @@
 	div {
 		max-width: 45em;
 		margin: 0 auto;
-		//padding-top: $pad*4;
+		padding-top: $pad*4;
 	}
 }
 
